tests/integration/fixtures/sample_org/objects/Account/fields/AnnualRevenueK__c.field-meta.xml
<CustomField>
    <fullName>AnnualRevenueK__c</fullName>
    <label>Annual Revenue (K)</label>
    <type>Number</type>
    <formula>AnnualRevenue / 1000</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
</CustomField>