tests/integration/fixtures/sample_org/objects/Account/fields/IsStrategic__c.field-meta.xml
<CustomField>
    <fullName>IsStrategic__c</fullName>
    <label>Strategic Account</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>