tests/integration/fixtures/sample_org/objects/Account/fields/OpenOpportunityCount__c.field-meta.xml
<CustomField>
    <fullName>OpenOpportunityCount__c</fullName>
    <label>Open Opportunities</label>
    <type>Summary</type>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
</CustomField>