tests/integration/fixtures/sample_org/objects/Account/validationRules/Industry_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Industry_Required</fullName>
    <active>true</active>
    <description>Account industry must be set on creation.</description>
    <errorConditionFormula>ISBLANK(TEXT(Industry))</errorConditionFormula>
    <errorDisplayField>Industry</errorDisplayField>
    <errorMessage>Industry is required.</errorMessage>
</ValidationRule>